--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.24",
+    "aws-amplify-react": "^2.3.4",
     "gatsby": "^2.3.5",
     "gatsby-image": "^2.0.37",
     "gatsby-plugin-feed": "^2.1.0",
